# transient_coalition_memory

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: materialize-release.yml  portable-release-fix.yml
benchmarks/aci_boss/: BOSS_PROTOCOL.md  REPORT_BOSS.md  run_boss.py
benchmarks/awareness_evolve/: REPORT_CONTACT_PEEK.md  evolve_empty_smoke.py  evolve_smoke.py
benchmarks/dbsa/: BAKED_DIAGNOSIS.md  CONSENSUS_AROUSAL_YEAR.md  CONSENSUS_AWARE_NEXT.md  CONSENSUS_COMBINED_LEAVE.md  CONSENSUS_MISSING_OBJECT.md  PROTOCOL.md  README.md  REPORT_CHRISTMAS.md  REPORT_CONTRACT_200.md  REPORT_CONTRACT_200_PUSH.md  REPORT_CONTRACT_SCREEN.md  REPORT_ESSC.md  REPORT_GATE_BUG.md  REPORT_PILOT.md  REPORT_POOL_RESTORE.md  REPORT_PWDR.md  REPORT_ROPL.md  REPORT_SCREEN_PUSH.md  REPORT_SOURCE_FORGET.md  REPORT_WEATHER_PROSPECTIVE.md  REPORT_WHITEBOARD_VALIDATION.md  REPORT_YEAR_MULTI_DOMAIN.md  VISION_ECOSYSTEM_READ.md  WHITEBOARD_AUTOPSY.md  WHY_MAJORITY_WINS.md  baselines.py  contract_simulator.py  evaluate.py  simulator.py
benchmarks/realdata_finance/: ACTIVE_COALITION_CONFIRMATION_PROTOCOL.md  CONFIRMATION_PROTOCOL.md  DIAGNOSTIC_CONTRAST_CONFIRMATION_PROTOCOL.md  DIAGNOSTIC_CONTRAST_V2_CONFIRMATION_PROTOCOL.md  (+69 more)
docs/: ACS.md  ARCHITECTURE.md  CUE_NEEDLE.md  EMPTY_CURRICULUM.md  MNEMOSHEATH.md  NORTH_STAR.md  README.md  REPRODUCIBILITY.md
tests/: test_active_coalition.py  test_batching.py  test_correlation_gate.py  test_cue_needle.py  test_empty_curriculum.py  test_mnemosheath.py  test_realdata_finance_stream.py
(+441 files in other folders)
